src/FinancialForce ERP Core/objects/DSCustomMapping__c.object
<CustomObject>
    <description>Mapping from message body to target field.</description>
    <fields>
        <fullName>CorrelationField__c</fullName>
        <label>Correlation Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CorrelationKey__c</fullName>
        <label>Correlation Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CorrelationStrategy__c</fullName>
        <label>Correlation Strategy</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Append</fullName>
                </value>
                <value>
                    <fullName>Replace</fullName>
                </value>
                <value>
                    <fullName>Update</fullName>
                </value>
                <value>
                    <fullName>UpdateTotal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DataTransformationTable__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The Data Transformation Table being used by this Declarative Subscription Custom Mapping.</description>
        <inlineHelpText>The Data Transformation Table being used by this Declarative Subscription Custom Mapping.</inlineHelpText>
        <label>Data Transformation Table</label>
        <referenceTo>DataTransformationTable__c</referenceTo>
        <relationshipLabel>Declarative Subscription Custom Mappings</relationshipLabel>
        <relationshipName>Declarative_SubscriptionCustomMappings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JsonPath__c</fullName>
        <description>Key that represents where to extract data from the message body.</description>
        <label>JSON Path</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <description>Order that the mappings have to be built.</description>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Subscription__c</fullName>
        <label>Subscription</label>
        <referenceTo>MessagingSubscription__c</referenceTo>
        <relationshipLabel>Custom Mapping</relationshipLabel>
        <relationshipName>CustomMapping</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TargetField__c</fullName>
        <description>Target field to map the message data on to.</description>
        <label>Target Field</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Child</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Declarative Subscription Custom Mapping</label>
    <nameField>
        <displayFormat>DSCM-{00000000}</displayFormat>
        <label>Declarative Subscription Custom Mapping</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Declarative Subscription Custom Mappings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>